--- a/login.html
+++ b/login.html
@@ -26,7 +26,7 @@
                             </div>
                             <div class="d-grid gap-2 mb-3">
                                 <button id="login-btn" class="btn btn-primary">Login</button>
-                                <!-- Sign Up Button Removed -->
+                                <button id="signup-btn" class="btn btn-outline-secondary">Sign Up (please consult first)</button>
                             </div>
                             <p id="auth-error" class="text-danger text-center small" style="display: none;"></p>
                         </div>
