Added role managemet

--- a/admin.html
+++ b/admin.html
@@ -24,6 +24,8 @@
                      <li class="nav-item"><a class="nav-link" href="income.html">Income</a></li>
                      <li class="nav-item"><a class="nav-link" href="expenses.html">Expenses</a></li>
                      <li class="nav-item"><a class="nav-link active" aria-current="page" href="admin.html">Admin Panel</a></li>
+                     <li class="nav-item"><a class="nav-link" href="assign_roles.html" id="nav-admin" style="display: none;">User Roles</a></li>
+
                      <li class="nav-item"><button id="logout-btn" class="btn btn-danger btn-sm ms-2" style="display: none;">Logout</button></li>
                  </ul>
             </div>
