--- a/income.html
+++ b/income.html
@@ -25,6 +25,7 @@
                      <li class="nav-item"><a class="nav-link" href="expenses.html">Expenses</a></li>
                      <li class="nav-item"><a class="nav-link" href="requests.html" id="nav-requests" style="display: none;">My Requests</a></li>
                      <li class="nav-item"><a class="nav-link" href="admin.html" id="nav-admin" style="display: none;">Admin Panel</a></li>
+                     <li class="nav-item"><a class="nav-link" href="assign_roles.html" id="nav-admin" style="display: none;">User Roles</a></li>
                      <li class="nav-item"><button id="logout-btn" class="btn btn-danger btn-sm ms-2" style="display: none;">Logout</button></li>
                  </ul>
             </div>
