--- a/assign_roles.html
+++ b/assign_roles.html
@@ -37,6 +37,7 @@
     <!-- Main Content -->
     <div class="container mt-4" id="main-content">
         <h2>Manage User Roles</h2>
+        <h1>Under Construction | Only the listed below users work currently. Don't ask.</h1>
         <p>Assign 'Admin' or 'Basic' roles to users. Users must have signed up first. Admins cannot change their own role here.</p>
 
         <div class="card">
